redactable/tests/ui/sensitive_dual_variant_redactable_rejected.rs
use redactable::SensitiveDual;

#[derive(SensitiveDual)]
enum Event {
    #[error("{value}")]
    #[redactable(legacy_formatting)]
    Message { value: String },
}

fn main() {}
